Bug 360675 - Plasma widgets and comics all have the same icon
Summary: Plasma widgets and comics all have the same icon
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-17 19:53 UTC by Thomas Pfeiffer
Modified: 2017-06-05 11:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2016-03-17 19:53:29 UTC
In the Comics as well as Plasma Desktop Widgets categories, all entries share the same icon, which makes it pretty useless. For Plasmoids, the screenshot alone should work, for comics we need something else.

Reproducible: Always
Comment 1 Aleix Pol 2016-03-17 20:20:50 UTC
Please suggest icons for each
Comment 2 Thomas Pfeiffer 2016-03-17 21:11:03 UTC
As I said: For the Plasmoids, I'd not show any icon at all, only the screenshot.
For comics it's difficult because we don't have pictures for each of them. Which is weird anyway, given that comics are an inherently visual medium.
Might it be possible for us to automatically retrieve a comic using the plugin, store it somewhere and then use that?
We need to get visuals _somewhere_, or otherwise we have to redesign the comics section completely so it works without any visuals.
Comment 3 Aleix Pol 2016-03-21 14:39:15 UTC
We'll still have the same problem on other places, i.e. list views:
* http://i.imgur.com/gS3blbv.png
* http://i.imgur.com/AfIOyRt.png
Comment 4 Dan Leinir Turthra Jensen 2017-06-05 11:15:56 UTC
Fixed in commit https://phabricator.kde.org/R134:05e780a32f210695ec2b3efb7a8d04ae27e96863

Use the first thumbnail as icon for KNS resources

Rather than using the same icon for all KNS based
resources, this will return the URL for the first
screenshot item.

BUG: 360675
Differential Revision: https://phabricator.kde.org/D5768