Use the first thumbnail as icon for KNS resources

Rather than using the same icon for all KNS based
resources, this will return the URL for the first
screenshot item.

BUG: 360675
Differential Revision: https://phabricator.kde.org/D5768